[project]
name = 'hasp'
description = 'Hubble Advanced Spectral Products creation code'
readme = 'README.md'
requires-python = '>=3.8'
license = { file = 'LICENSE' }
authors = [{ name = 'STScI', email = 'help@stsci.edu' }]
classifiers = [
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Astronomy',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3',
]
dependencies = [
    'astropy >=5.0.4',
    'ullyses >= 4.1.0',
]
dynamic = ['version']

[project.optional-dependencies]
docs = [
    'numpydoc',
    'packaging >=17',
    'sphinx',
    'sphinx-astropy',
    'sphinx-rtd-theme',
    'stsci-rtd-theme',
]
test = [
    'psutil',
    'pytest >=4.6.0',
    'pytest-cov',
]
opencv = [
    'opencv-python >=4.6.0.66',
]

[project.urls]
'repository' = 'https://github.com/spacetelescope/hasp'
'tracker' = 'https://github.com/spacetelescope/hasp/issues'

[project.scripts]
swrapper = 'hasp.wrapper:call_main'

[build-system]
requires = [
    'setuptools >=61',
    'setuptools_scm[toml] >=3.4',
    'wheel',
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "hasp/_version.py"

[tool.setuptools]
zip-safe = true

[tool.pytest.ini_options]
minversion = 4.6

[tool.ruff]
line-length = 110
select = ['F', 'W', 'E', 'C']
ignore = [
    'C901', # variable is too complex
]
exclude = [
    'docs',
    'build',
    'dist',
    '.tox',
    '.eggs',
]
